<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.danthe1st</groupId>
	<artifactId>checker-test</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<checkerframework.version>3.43.0</checkerframework.version>
	</properties>
	<dependencies>
		<dependency>
	      <groupId>org.checkerframework</groupId>
	      <artifactId>checker-qual</artifactId>
	      <version>${checkerframework.version}</version>
	      <scope>provided</scope>
	    </dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>21</release>
					<fork>true</fork>
					<annotationProcessorPaths>
						<path>
							<groupId>org.checkerframework</groupId>
							<artifactId>checker</artifactId>
							<version>${checkerframework.version}</version>
						</path>
					</annotationProcessorPaths>
					<annotationProcessors>
						<annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
					</annotationProcessors>
					<compileSourceRoots>
						<compileSourceRoot>${project.basedir}/src/main/java</compileSourceRoot>
					</compileSourceRoots>
					<compilerArgs>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
						<arg>-Xmaxerrs</arg>
						<arg>10000</arg>
						<arg>-Xmaxwarns</arg>
						<arg>10000</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>